重构DICOM处理逻辑，支持中文及单文件发布
移除对 DicomDemo 项目的依赖，将功能整合到 WpfApp.Utils.DicomHelp 中，增强对 DICOM SpecificCharacterSet 的支持，特别是中文字符的处理。

- Program.cs: 删除无用变量，优化患者信息输出。
- MainViewModel.cs: 替换写入逻辑，使用新的中文处理方法。
- WpfApp.csproj: 支持单文件发布，新增 fo-dicom 包引用。
- DicomHelp.cs: 新增工具类，提供 DICOM 字符串读取、写入及标签解析等功能。

--- a/WpfApp/WpfApp.csproj
+++ b/WpfApp/WpfApp.csproj
@@ -6,6 +6,10 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+	<!-- 将本机库包含在单个 .exe 文件中。这会增加 .exe 文件的大小，但减少了发布目录中的文件数量 -->
+	<IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+	<!--尝试将所有内容（包括资源文件等）打包进单个 .exe 文件 -->
+	<IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,11 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="fo-dicom" Version="5.2.5" />
     <PackageReference Include="HandyControl" Version="3.6.0-rc3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\DicomDemo\DicomDemo.csproj" />
   </ItemGroup>
 
   <ItemGroup>
