--- a/WpfApp/WpfApp.csproj
+++ b/WpfApp/WpfApp.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="fo-dicom" Version="5.2.5" />
+    <PackageReference Include="fo-dicom.Imaging.ImageSharp" Version="5.2.5" />
     <PackageReference Include="HandyControl" Version="3.6.0-rc3" />
   </ItemGroup>
 
